feat(file-editing): add file-based editing options and settings (#2)
* feat(file-editing): add file-based editing options and settings

* feat(settings): add file-based editing options and update diff settings

* feat(settings): update file-system editing options and refine tab group behavior

* feat(settings): add editing type and diff settings configurations

* feat(settings): add editing type and diff settings configurations

* feat(settings): add editing type and file editing options with descriptions

* feat(settings): update autoFocus and autoClose settings descriptions for clarity

* feat(diffEditor): fix logic to work with configurations

--- a/src/package.json
+++ b/src/package.json
@@ -334,6 +334,11 @@
 					"default": true,
 					"description": "%settings.enableCodeActions.description%"
 				},
+				"roo-cline.diffEnabled": {
+					"type": "boolean",
+					"default": false,
+					"description": "%settings.diffEnabled.description%"
+				},
 				"roo-cline.diffViewAutoFocus": {
 					"type": "boolean",
 					"default": false,
@@ -348,6 +353,21 @@
 					"type": "boolean",
 					"default": false,
 					"description": "%roo-cline.autoCloseAllRooTabs.description%"
+				},
+				"roo-cline.fileBasedEditing": {
+					"type": "boolean",
+					"default": false,
+					"description": "%roo-cline.fileBasedEditing.description%"
+				},
+				"roo-cline.openTabsInCorrectGroup": {
+					"type": "boolean",
+					"default": false,
+					"description": "%roo-cline.openTabsInCorrectGroup.description%"
+				},
+				"roo-cline.openTabsAtEndOfList": {
+					"type": "boolean",
+					"default": false,
+					"description": "%roo-cline.openTabsAtEndOfList.description%"
 				}
 			}
 		}
